ico, PDFs and utf-8

--- a/IAA.html
+++ b/IAA.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Introdução e Analise de Algoritimo</title>
+
+	<link rel = "shortcut icon" type = "imagem/x-icon" href = img/Favicon.ico>
+	<meta charset="utf-8"/>
 	<div name="Script do Bootstrap">
 		<!-- CSS only -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
@@ -40,7 +43,11 @@
 			Insira aqui
 		</p>
 		<h2>Semana 1:</h2>
+		<p>
+			Aula da quinta: <a href="http://meet.google.com/zfb-wsyv-mtq">Meet</a><br>
+			Apresentação: <a href="IAA/Semana1.pdf">PDF</a>
 
+		</p>
 	</div>
 </body>
 </html>
