--- a/MDI.html
+++ b/MDI.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title>Matemática Discreta I</title>
+	<meta charset="utf-8"/>
+
+	<link rel = "shortcut icon" type = "imagem/x-icon" href = img/Favicon.ico>
+	
 	<div name="Script do Bootstrap">
 		<!-- CSS only -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
