--- a/MVGA.html
+++ b/MVGA.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Matrizes, Vetores e Geometria Analitica</title>
+
+	<link rel = "shortcut icon" type = "imagem/x-icon" href = img/Favicon.ico>
+	<meta charset="utf-8"/>
 	<div name="Script do Bootstrap">
 		<!-- CSS only -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
@@ -37,9 +40,12 @@
 		<a href="https://uspdigital.usp.br/jupiterweb/obterDisciplina?nomdis=&sgldis=ACH2033">Link Jupitero</a>
 		<h2>Metodo</h2>
 		<p>
-			Insira aqui
+			Apostila: <a href="MVGA/Apostila.pdf">PDF</a>
 		</p>
 		<h2>Semana 1:</h2>
+		<p>
+			
+		</p>
 
 	</div>
 </body>
