--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
 	<title>Semestre 2</title>
+
+	<link rel = "shortcut icon" type = "imagem/x-icon" href = img/Favicon.ico>
+
+	<meta charset="utf-8"/>
 	<div name="Script do Bootstrap">
 		<!-- CSS only -->
+
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css" integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
 
 		<!-- JS, Popper.js, and jQuery -->
